--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "cheerio": "^1.0.0-rc.2",
+    "cli-table": "^0.3.1",
+    "crawler": "^1.1.4",
+    "request-promise": "^4.2.2",
+    "url-parse": "^1.4.1"
+  }
 }
